--- a/eParty/packages.config
+++ b/eParty/packages.config
@@ -85,8 +85,9 @@
   <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.2.3" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.3" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.2.3" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Google" version="4.2.3" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net472" />
