--- a/eParty/eParty.csproj
+++ b/eParty/eParty.csproj
@@ -554,6 +554,9 @@
     <Compile Include="Areas\Admin\Controllers\UserPermissionController.cs" />
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Areas\Admin\Models\FoodRecipeViewModel.cs" />
+    <Compile Include="Areas\Staff\Controllers\DashboardController.cs" />
+    <Compile Include="Areas\Staff\Controllers\PersonalAccountController.cs" />
+    <Compile Include="Areas\Staff\StaffAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -1981,6 +1984,15 @@
     <Content Include="Areas\Admin\Views\Posters\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Posters\Index.cshtml" />
     <Content Include="Areas\Admin\Views\UserPermission\RegisterRole.cshtml" />
+    <Content Include="Areas\Staff\Views\web.config" />
+    <Content Include="Areas\Staff\Views\Shared\_LayoutStaff.cshtml" />
+    <Content Include="Areas\Staff\Views\Dashboard\Index.cshtml" />
+    <Content Include="Areas\Staff\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Staff\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Staff\Views\PersonalAccount\UpdateInfo.cshtml" />
+    <Content Include="Areas\Staff\Views\PersonalAccount\ChangePassword.cshtml" />
+    <Content Include="Areas\Staff\Views\PersonalAccount\GoogleLink.cshtml" />
+    <Content Include="Areas\Staff\Views\PersonalAccount\Index.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
@@ -2038,6 +2050,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Staff\Data\" />
     <Folder Include="Data\" />
     <Folder Include="Views\Login\" />
   </ItemGroup>
