--- a/eParty/eParty.csproj
+++ b/eParty/eParty.csproj
@@ -2047,7 +2047,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Account\RegisterConfirmation.cshtml" />
     <Content Include="Views\Home\ConfirmEmail.cshtml" />
-    <Content Include="Views\Home\BookPartial.cshtml" />
+    <Content Include="Views\Home\MenuList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
