--- a/eParty/eParty.csproj
+++ b/eParty/eParty.csproj
@@ -562,72 +562,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202510130312455_taomoi.cs" />
-    <Compile Include="Migrations\202510130312455_taomoi.Designer.cs">
-      <DependentUpon>202510130312455_taomoi.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202510140617310_add_category.cs" />
-    <Compile Include="Migrations\202510140617310_add_category.Designer.cs">
-      <DependentUpon>202510140617310_add_category.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202510160646570_InitialIdentitySchema.cs" />
-    <Compile Include="Migrations\202510160646570_InitialIdentitySchema.Designer.cs">
-      <DependentUpon>202510160646570_InitialIdentitySchema.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202510261433153_hello.cs" />
-    <Compile Include="Migrations\202510261433153_hello.Designer.cs">
-      <DependentUpon>202510261433153_hello.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202510270253329_pad.cs" />
-    <Compile Include="Migrations\202510270253329_pad.Designer.cs">
-      <DependentUpon>202510270253329_pad.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202510270337201_news.cs" />
-    <Compile Include="Migrations\202510270337201_news.Designer.cs">
-      <DependentUpon>202510270337201_news.cs</DependentUpon>
-    <Compile Include="Migrations\202510240914132_RenameUserToSystemUser.cs" />
-    <Compile Include="Migrations\202510240914132_RenameUserToSystemUser.Designer.cs">
-      <DependentUpon>202510240914132_RenameUserToSystemUser.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\AppDbContext.cs" />
-    <Compile Include="Models\ApplicationUser.cs" />
-    <Compile Include="Models\Category.cs" />
-    <Compile Include="Models\Comment.cs" />
-    <Compile Include="Models\Discount.cs" />
-    <Compile Include="Models\Food.cs" />
-    <Compile Include="Models\FoodDto.cs" />
-    <Compile Include="Models\FoodIngredient.cs" />
-    <Compile Include="Models\HomeViewModel.cs" />
-    <Compile Include="Models\Ingredient.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\Menu.cs" />
-    <Compile Include="Models\MenuDetail.cs" />
-    <Compile Include="Models\MenuDetailDto.cs" />
-    <Compile Include="Models\MenuViewModel.cs" />
-    <Compile Include="Models\News.cs" />
-    <Compile Include="Models\NewsViewModel.cs" />
-    <Compile Include="Models\Partner.cs" />
-    <Compile Include="Models\Party.cs" />
-    <Compile Include="Models\Poster.cs" />
-    <Compile Include="Models\PriceHistory.cs" />
-    <Compile Include="Models\Provider.cs" />
-    <Compile Include="Models\Rate.cs" />
-    <Compile Include="Models\Staff.cs" />
-    <Compile Include="Models\StaffParty.cs" />
-    <Compile Include="Models\SystemUser.cs" />
-    <Compile Include="Models\UserDiscount.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\EmailService.cs" />
-    <Compile Include="Service\MenuService.cs" />
-    <Compile Include="Service\PartyService.cs" />
-    <Compile Include="Startup.cs" />
-    <Compile Include="Utils\EmailUtils.cs" />
-    <Compile Include="Utils\MapUtils.cs" />
-    <Compile Include="Utils\StringUtils.cs" />
-  </ItemGroup>
+    </Compile>     <Compile Include="Models\AccountViewModels.cs" /><Compile Include="Models\AppDbContext.cs" /><Compile Include="Models\ApplicationUser.cs" /><Compile Include="Models\Category.cs" /><Compile Include="Models\Comment.cs" /><Compile Include="Models\Discount.cs" /><Compile Include="Models\Food.cs" /><Compile Include="Models\FoodDto.cs" /><Compile Include="Models\FoodIngredient.cs" /><Compile Include="Models\HomeViewModel.cs" /><Compile Include="Models\Ingredient.cs" /><Compile Include="Models\ManageViewModels.cs" /><Compile Include="Models\Menu.cs" /><Compile Include="Models\MenuDetail.cs" /><Compile Include="Models\MenuDetailDto.cs" /><Compile Include="Models\MenuViewModel.cs" /><Compile Include="Models\News.cs" /><Compile Include="Models\NewsViewModel.cs" /><Compile Include="Models\Partner.cs" /><Compile Include="Models\Party.cs" /><Compile Include="Models\Poster.cs" /><Compile Include="Models\PriceHistory.cs" /><Compile Include="Models\Provider.cs" /><Compile Include="Models\Rate.cs" /><Compile Include="Models\Staff.cs" /><Compile Include="Models\StaffParty.cs" /><Compile Include="Models\SystemUser.cs" /><Compile Include="Models\UserDiscount.cs" /><Compile Include="Properties\AssemblyInfo.cs" /><Compile Include="Service\EmailService.cs" /><Compile Include="Service\MenuService.cs" /><Compile Include="Service\PartyService.cs" /><Compile Include="Startup.cs" /><Compile Include="Utils\EmailUtils.cs" /><Compile Include="Utils\MapUtils.cs" /><Compile Include="Utils\StringUtils.cs" /></ItemGroup>
   <ItemGroup>
     <Content Include="Content\admin\calendar\css\fullcalendar.css" />
     <Content Include="Content\admin\calendar\src\fonts\dropways\dropways.css" />
@@ -1576,6 +1511,7 @@
     <Content Include="Content\landingpage\lib\wow\wow.js" />
     <Content Include="Content\landingpage\lib\wow\wow.min.js" />
     <Content Include="Content\login\hero-bg.jpg" />
+    <Content Include="Content\login\SharedMessageTemplate.css" />
     <Content Include="Content\login\style.css" />
     <Content Include="Content\news\assets\css\animate.min.css" />
     <Content Include="Content\news\assets\css\bootstrap.min.css" />
@@ -2102,28 +2038,6 @@
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\202510130312455_taomoi.resx">
-      <DependentUpon>202510130312455_taomoi.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202510140617310_add_category.resx">
-      <DependentUpon>202510140617310_add_category.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202510160646570_InitialIdentitySchema.resx">
-      <DependentUpon>202510160646570_InitialIdentitySchema.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202510261433153_hello.resx">
-      <DependentUpon>202510261433153_hello.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202510270253329_pad.resx">
-      <DependentUpon>202510270253329_pad.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202510270337201_news.resx">
-      <DependentUpon>202510270337201_news.cs</DependentUpon>
-    <EmbeddedResource Include="Migrations\202510240914132_RenameUserToSystemUser.resx">
-      <DependentUpon>202510240914132_RenameUserToSystemUser.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
