--- a/eParty/eParty.csproj
+++ b/eParty/eParty.csproj
@@ -563,6 +563,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -570,7 +571,11 @@
     <Compile Include="Migrations\202510290045549_seed.Designer.cs">
       <DependentUpon>202510290045549_seed.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\Configuration.cs" />     <Compile Include="Models\AccountViewModels.cs" /><Compile Include="Models\AppDbContext.cs" /><Compile Include="Models\ApplicationUser.cs" /><Compile Include="Models\Category.cs" /><Compile Include="Models\Comment.cs" /><Compile Include="Models\Discount.cs" /><Compile Include="Models\Food.cs" /><Compile Include="Models\FoodDto.cs" /><Compile Include="Models\FoodIngredient.cs" /><Compile Include="Models\HomeViewModel.cs" /><Compile Include="Models\Ingredient.cs" /><Compile Include="Models\ManageViewModels.cs" /><Compile Include="Models\Menu.cs" /><Compile Include="Models\MenuDetail.cs" /><Compile Include="Models\MenuDetailDto.cs" /><Compile Include="Models\MenuViewModel.cs" /><Compile Include="Models\News.cs" /><Compile Include="Models\NewsViewModel.cs" /><Compile Include="Models\Partner.cs" /><Compile Include="Models\Party.cs" /><Compile Include="Models\Poster.cs" /><Compile Include="Models\PriceHistory.cs" /><Compile Include="Models\Provider.cs" /><Compile Include="Models\Rate.cs" /><Compile Include="Models\StaffParty.cs" /><Compile Include="Models\SystemUser.cs" /><Compile Include="Models\UserDiscount.cs" /><Compile Include="Properties\AssemblyInfo.cs" /><Compile Include="Service\EmailService.cs" /><Compile Include="Service\MenuService.cs" /><Compile Include="Service\PartyService.cs" /><Compile Include="Startup.cs" /><Compile Include="Utils\EmailUtils.cs" /><Compile Include="Utils\MapUtils.cs" /><Compile Include="Utils\StringUtils.cs" /></ItemGroup>
+    <Compile Include="Migrations\202510290246537_InitialCreate.cs" />
+    <Compile Include="Migrations\202510290246537_InitialCreate.Designer.cs">
+      <DependentUpon>202510290246537_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />     <Compile Include="Models\AccountViewModels.cs" /><Compile Include="Models\AppDbContext.cs" /><Compile Include="Models\ApplicationUser.cs" /><Compile Include="Models\Category.cs" /><Compile Include="Models\Comment.cs" /><Compile Include="Models\Discount.cs" /><Compile Include="Models\Food.cs" /><Compile Include="Models\FoodDto.cs" /><Compile Include="Models\FoodIngredient.cs" /><Compile Include="Models\HomeViewModel.cs" /><Compile Include="Models\Ingredient.cs" /><Compile Include="Models\ManageViewModels.cs" /><Compile Include="Models\Menu.cs" /><Compile Include="Models\MenuDetail.cs" /><Compile Include="Models\MenuDetailDto.cs" /><Compile Include="Models\MenuViewModel.cs" /><Compile Include="Models\News.cs" /><Compile Include="Models\NewsDetailViewModel.cs" /><Compile Include="Models\NewsViewModel.cs" /><Compile Include="Models\Partner.cs" /><Compile Include="Models\Party.cs" /><Compile Include="Models\Poster.cs" /><Compile Include="Models\PriceHistory.cs" /><Compile Include="Models\Provider.cs" /><Compile Include="Models\Rate.cs" /><Compile Include="Models\StaffParty.cs" /><Compile Include="Models\SystemUser.cs" /><Compile Include="Models\UserDiscount.cs" /><Compile Include="Properties\AssemblyInfo.cs" /><Compile Include="Service\EmailService.cs" /><Compile Include="Service\MenuService.cs" /><Compile Include="Service\PartyService.cs" /><Compile Include="Startup.cs" /><Compile Include="Utils\EmailUtils.cs" /><Compile Include="Utils\MapUtils.cs" /><Compile Include="Utils\StringUtils.cs" /></ItemGroup>
   <ItemGroup>
     <Content Include="Content\admin\calendar\css\fullcalendar.css" />
     <Content Include="Content\admin\calendar\src\fonts\dropways\dropways.css" />
@@ -2008,6 +2013,7 @@
     <Content Include="Views\Account\RegisterConfirmation.cshtml" />
     <Content Include="Views\Home\ConfirmEmail.cshtml" />
     <Content Include="Views\Home\MenuList.cshtml" />
+    <Content Include="Views\News\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -2050,6 +2056,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202510290045549_seed.resx">
       <DependentUpon>202510290045549_seed.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202510290246537_InitialCreate.resx">
+      <DependentUpon>202510290246537_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
