--- a/eParty/packages.config
+++ b/eParty/packages.config
@@ -57,7 +57,9 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.8.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.8.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Razor" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.8.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.DiaSymReader.Native" version="1.7.0" targetFramework="net472" />
@@ -88,11 +90,20 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Google" version="4.2.3" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Web.CodeGeneration" version="2.2.4" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Web.CodeGeneration.Contracts" version="2.2.4" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Web.CodeGeneration.Core" version="2.2.4" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Web.CodeGeneration.Design" version="2.2.4" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Web.CodeGeneration.EntityFrameworkCore" version="2.2.4" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Web.CodeGeneration.Templating" version="2.2.4" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Web.CodeGeneration.Utils" version="2.2.4" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Web.CodeGenerators.Mvc" version="2.2.4" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json.Bson" version="1.0.1" targetFramework="net472" />
+  <package id="NuGet.Frameworks" version="4.7.3" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="QRCoder" version="1.7.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
@@ -101,6 +112,12 @@
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
+  <package id="System.Composition" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.Convention" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.Hosting" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.Runtime" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.TypedParts" version="1.0.31" targetFramework="net472" />
   <package id="System.Console" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net472" />
